--- a/project/kubernetes/deploy.yaml
+++ b/project/kubernetes/deploy.yaml
@@ -31,11 +31,11 @@ spec:
         - containerPort: 3111
         resources:
           requests:
-            memory: "64Mi"
-            cpu: "250m"
+            memory: 64Mi
+            cpu: 250m
           limits:
-            memory: "128Mi"
-            cpu: "500m"
+            memory: 128Mi
+            cpu: 500m
         livenessProbe:
           httpGet:
             path: /healthz
