--- a/project/helm/templates/service.yml
+++ b/project/helm/templates/service.yml
@@ -10,7 +10,12 @@ spec:
   ports:
   - port: {{ .Values.service.port }}
     protocol: {{ .Values.service.protocol }}
-    targetPort: {{ .Values.service.targetPort }}
+    {{ if .Values.service.targetPort }} 
+    targetPort: {{ .Values.service.targetPort }} 
+    {{ else }} 
+    targetPort: 3111 
+    {{ end }}
+
   selector:
     app: {{ .Values.image.repository }}
     tag: {{ .Values.image.tag }}
